Don't warn about unsubmitted changes unless the form has text

You could delete all the text; the form is still modified, but we
shouldn't warn about it, since you have no data to lose.

https://bugzilla.gnome.org/show_bug.cgi?id=668260